crud_app_k8s_config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: crud-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-app-backend-service
            port:
              number: 8000
